--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="row">
-  <div class="col-sm-6 col-md-4" *ngFor="let feature of features">
+  <div class="col-sm-2 col-md-3" *ngFor="let feature of features">
     <div class="thumbnail">
-      <img src="http://images.clipartpanda.com/feature-clipart-feature-md.png" alt="{{feature.name}}">
+      <img class="img-circle" src="http://images.clipartpanda.com/feature-clipart-feature-md.png" alt="{{feature.name}}">
       <div class="caption">
         <h3>{{feature.name}}</h3>
         <p>{{feature.description}}</p>
