--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Spring Sandbox</a>
+      <a class="navbar-brand" routerLink="/">Spring Sandbox</a>
     </div>
   </div>
 </nav>
