--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -8,7 +8,7 @@
         <p>Author: {{feature.author}}</p>
         <br>
         <p>
-          <a href="#" class="btn btn-primary center-block" role="button">Check it out!</a>
+          <a routerLink="/{{feature.name}}" class="btn btn-primary center-block" role="button">Check it out!</a>
         </p>
       </div>
     </div>
