move api url to env var

--- a/frontend/src/app/features/example-feature/example-feature.component.html
+++ b/frontend/src/app/features/example-feature/example-feature.component.html
@@ -1,3 +1,5 @@
-<p>
-  example-feature works!
-</p>
+<div class="embed-responsive embed-responsive-16by9">
+<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/dQw4w9WgXcQ"></iframe>
+</div>
+
+
