db migration fix

--- a/frontend/src/app/features/example-feature/example-feature.component.html
+++ b/frontend/src/app/features/example-feature/example-feature.component.html
@@ -1,5 +1,5 @@
 <div class="embed-responsive embed-responsive-16by9">
-<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/dQw4w9WgXcQ"></iframe>
+<iframe allowfullscreen="allowfullscreen" class="embed-responsive-item" src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1"></iframe>
 </div>
 
 
